add discord and google

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# DISCORD_ID=1079803157011501066
-# DISCORD_SECRET=tBVqLY4rO17qrvHBgvNnGBLZXCawElVQ
-# GOOGLE_ID=740783174272-lfroricmgv53q91pcl9r5fuplainehum.apps.googleusercontent.com
-# GOOGLE_SECRET=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
+DISCORD_ID=1079803157011501066
+DISCORD_SECRET=tBVqLY4rO17qrvHBgvNnGBLZXCawElVQ
+GOOGLE_ID=740783174272-lfroricmgv53q91pcl9r5fuplainehum.apps.googleusercontent.com
+GOOGLE_SECRET=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
 GITHUB_ID=a258b2578f2844232041
 GITHUB_SECRET=4ffbd87e39b65cf7e0a002e93370d4e8a665606a
 
