--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "lead-generation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.11.0",
-    "@tailwindcss/typography": "^0.5.9",
-    "@tanstack/react-query": "^4.26.1",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "daisyui": "^2.51.2",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "next-auth": "^4.19.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.6"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "prisma": "^4.11.0",
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "lead-generation",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.11.0",
+		"@tailwindcss/typography": "^0.5.9",
+		"@tanstack/react-query": "^4.26.1",
+		"@types/node": "18.14.2",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"daisyui": "^2.51.2",
+		"eslint": "8.35.0",
+		"eslint-config-next": "13.2.1",
+		"next": "latest",
+		"next-auth": "^4.19.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0",
+		"typescript": "4.9.5",
+		"util": "^0.12.5",
+		"zod": "^3.21.4",
+		"zustand": "^4.3.6"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"prisma": "^4.11.0",
+		"tailwindcss": "^3.2.7"
+	}
 }
